force-app/main/default/objects/AccountView__c/AccountView__c.object-meta.xml
<CustomObject>
    <label>Account Team View</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AccountTeamView Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team View</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>