force-app/main/default/objects/AccountView__c/fields/Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Access__c</fullName>
    <label>Account Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>