force-app/main/default/objects/AccountView__c/fields/Account_Access_Custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Access_Custom__c</fullName>
    <formula>CASE(Account_Access__c, &#39;Read Only&#39;, &#39;Read&#39;,&#39;Read/Write&#39;,&#39;Edit&#39;,&#39;None&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Access Custom</label>
    <type>Text</type>
</CustomField>