force-app/main/default/objects/AccountView__c/fields/Account_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Role__c</fullName>
    <label>Account Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Lead Qualifier</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Consultant</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Corporate Account Lead</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Technical Service Lead</fullName>
            </value>
            <value>
                <fullName>Technical Services Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>