force-app/main/default/objects/AccountView__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Business__c</referenceTo>
    <relationshipName>Account_Views</relationshipName>
    <type>Lookup</type>
</CustomField>