force-app/main/default/objects/AccountView__c/fields/Business_Detail__c.field-meta.xml
<CustomField>
    <fullName>Business_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT CURRENTLY USED</description>
    <label>Business Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>BusinessDetail__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessDetail__c</referenceTo>
    <relationshipLabel>Account Team View</relationshipLabel>
    <relationshipName>Account_Team_View</relationshipName>
    <type>Lookup</type>
</CustomField>