force-app/main/default/objects/AccountView__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <formula>Business_Detail__r.BusinessAlias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name</label>
    <type>Text</type>
</CustomField>