force-app/main/default/objects/AccountView__c/fields/Case_Access_Custom__c.field-meta.xml
<CustomField>
    <fullName>Case_Access_Custom__c</fullName>
    <formula>CASE(Case_Access__c,&#39;Read Only&#39;,&#39;Read&#39;,&#39;Read/Write&#39;,&#39;Edit&#39;,&#39;None&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Access Custom</label>
    <type>Text</type>
</CustomField>