force-app/main/default/objects/AccountView__c/fields/Opportunity_Access_Custom__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Access_Custom__c</fullName>
    <formula>CASE(Opportunity_Access__c, &#39;Private&#39;, &#39;None&#39;,&#39;Read Only&#39;,&#39;Read&#39;,&#39;Read/Write&#39;,&#39;Edit&#39;,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Access Custom</label>
    <type>Text</type>
</CustomField>